Fix detail color cut off

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -158,7 +158,8 @@
   -fx-font-weight: bold;
 }
 
-.detailed-view-card {
+.detailed-view-card,
+.detailed-scroll-pane .viewport {
   -fx-background-color: -fx-color;
 }
 
